@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20040308
+MANIFEST for ded, version t20040318
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
